Modificando header contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -4,25 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto - HR Turbos</title>
-  <link rel="stylesheet" href="css/contactos.css">
+  <link rel="stylesheet" href="prueba.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
-    </div>
-
-    <div class="menu-toggle" id="menu-toggle">☰</div>
-    <nav id="navegacion">
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="productos.html" class="activo">Productos</a></li>
-       
-      </ul>
-    </nav>
-  </header>
+<header>
+            <div class="logo">
+                <img src="galeria/logo.png" alt="HR Turbos" height="80" width="150">
+            </div>
+            <div class="menu-toggle" id="menu-toggle">☰</div>
+            <nav id="navegacion">
+                <ul id="lista">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html" class="activo">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
 
   <main class="contacto">
     <h1 class="intro">CONTÁCTANOS</h1>
@@ -67,7 +66,7 @@
 
   <section class="mapa">
       <h2>Nos encontramos en <span>Neuquén</span>, visítanos acá:</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.205910506342!2d-68.0693406!3d-38.964966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3382c83e4627%3A0x52606904c8318d19!2sHR%20turbos%20y%20servicios!5e0!3m2!1sen!2sar!4v1762401256528!5m2!1sen!2sar" width="2000" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.205910506342!2d-68.0693406!3d-38.964966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3382c83e4627%3A0x52606904c8318d19!2sHR%20turbos%20y%20servicios!5e0!3m2!1sen!2sar!4v1762401256528!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </iframe>
     </section>
     
@@ -87,15 +86,22 @@
     <p>contactate  con <strong>HR TURBO</strong>.</p>
     <p>Nuestros horarios son</p>
     <p><strong>Lunes a Viernes </strong></p>
-          <p> 9:00 Hs A 18:00 Hs</p>
+          <p> 9:00 Hs A 20:00 Hs</p>
     <p>¡Gracias por confiar en nosotros! </p>
     <button id="cerrar-modal">Continuar</button>
   </div>
 </div>
 
-  <footer>
-    <p>© 2025 HR Turbos - Todos los derechos reservados</p>
-  </footer>
+ <footer class="main-footer">
+        <div class="footer-content">
+            <h3>CONTACTOS:</h3>
+            <p>
+                <a href="mailto:raularnol@yahoo.com">Gmail</a> |
+                <a href="tel:‪‪+5492995308980‬‬">Telefono</a>
+            </p>
+        </div>
+        <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+    </footer>
 
   <script src="JS/contactos.js"></script>
   
