--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
         <div class="fondo-animado"></div>
         <header>
             <div class="logo">
-                <img src="galeria/logo.png" alt="HR Turbos" height="80" width="150">
+                <img src="galeria/logo.png" alt="HR Turbos" >
             </div>
             <div class="menu-toggle" id="menu-toggle">☰</div>
             <nav id="navegacion">
